fix overflow-x

--- a/scss/_first.scss
+++ b/scss/_first.scss
@@ -6,7 +6,7 @@
 }
 
 .back {
-  background: url(../img/ostrov-anak-krakatau-indoneziia-vulkan-izverzhenie.jpg) no-repeat;
+  background: url(../img/kater-vodoem-fotoart-temnyi-fon-mostik-pirs-gory-tuchi-nebo.jpg) no-repeat;
   background-repeat: round;
   width: 120%;
   height: 100%;
