--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -71,7 +71,7 @@
 
 
 
-@media screen and (max-width: 1678px) {
+@media screen and (max-width: 1708px) {
   .container-flex-row-header {
     width: 91rem;
   }
