--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,7 @@
 }
 
 body {
-  overflow: overlay;
+  overflow-x: hidden;
 }
+
 
